<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always"/>
    <item
        android:id="@+id/favorite_user"
        android:title="@string/favorite"
        android:icon="@drawable/ic_red_favorite_50"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/action_dark_mode"
        android:orderInCategory="100"
        android:title="@string/dark_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_light_mode"
        android:orderInCategory="100"
        android:title="@string/light_mode"
        app:showAsAction="never" />
</menu>